bluejay-typegen/tests/validation_cases/error/invalid_query_fragment_and_field_selections.stderr
error: Error: typegen requires a fragment spread to be the only selection in the set
          ╭─[ <unknown>:1:1 ]
          │
        1 │ { foo ...MyFragment } fragment MyFragment on Query { foo }
          │ ──────────┬─┬────────
          │           ╰──────────── Selection set contains a fragment spread and other selections
          │             │
          │             ╰────────── Fragment spread
       ───╯
  --> tests/validation_cases/error/invalid_query_fragment_and_field_selections.rs:7:13
   |
7  |       #[query([
   |  _____________^
8  | |         {
9  | |             foo
10 | |             ...MyFragment
...  |
16 | |     ])]
   | |_____^
